fix double-tap zoom on iOS

--- a/ts/controls.scss
+++ b/ts/controls.scss
@@ -2,6 +2,14 @@
   position: relative;
   width: 100px;
   height: 100px;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .gameboy {
